--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "My App",
-  "short_name": "My App",
+  "name": "Dashboard Demo",
+  "short_name": "Dash Demo",
     "icons": [{
       "src": "images/app-icon-32.png",
       "type": "image/png",
