--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.1",
     "polymer": "polymer/polymer#^1.4.0",
     "iron-icons": "PolymerElements/iron-icons#^1.1.3",
-    "vaadin-icons": "^1.0.0"
+    "vaadin-icons": "^1.0.0",
+    "vaadin-grid": "^1.0.0"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
