--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "app-layout": "polymerlabs/app-layout#master",
     "app-route": "polymerelements/app-route#~0.9.0",
-    "iron-flex-layout": "polymerelements/iron-flex-layout#^1.0.0",
+    "iron-flex-layout": "^1.3.1",
     "iron-icon": "polymerelements/iron-icon#^1.0.0",
     "iron-iconset-svg": "polymerelements/iron-iconset-svg#^1.0.0",
     "iron-localstorage": "polymerelements/iron-localstorage#^1.0.0",
