--- a/bower.json
+++ b/bower.json
@@ -14,10 +14,12 @@
     "iron-media-query": "polymerelements/iron-media-query#^1.0.0",
     "iron-pages": "polymerelements/iron-pages#^1.0.0",
     "iron-selector": "polymerelements/iron-selector#^1.0.0",
-    "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.1",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.1",
     "polymer": "polymer/polymer#^1.4.0",
     "iron-icons": "PolymerElements/iron-icons#^1.1.3",
-    "vaadin-icons": "^1.0.0"
+    "vaadin-icons": "^1.0.0",
+    "paper-card": "PolymerElements/paper-card#^1.1.1",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.4"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
